<resources>
    <string name="app_name">Catch Me If You Can</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenges">Challenges</string>
    <string name="friends">Friends</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="content_nav_open">Navigation drawer open</string>
    <string name="content_nav_closed">Navigation drawer closed</string>
    <string name="challenges_fragment">Challenges Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="will_implement_in_the_future">Will implement in the future</string>
    <string name="signup">Signup</string>
    <string name="signup_fragment">Signup Fragment</string>
    <string name="welcome_text">Welcome!</string>
    <string name="signup_message">Create an account to start racing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? Login here</string>
    <string name="this_is_a_required_field">This is a required field</string>
    <string name="email_invalid_message">This email is invalid</string>
    <string name="password_invalid_message">Must contain 8 characters with at least 1 uppercase and 1 lowercase letter and either 1 number or 1 special character</string>
    <string name="confirm_password_invalid_message">Passwords must match</string>
    <string name="login_message">Login to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account? Signup here</string>
    <string name="startup_fragment">Startup Fragment</string>
    <string name="forgot_password_fragment">Forgot Password Fragment</string>
    <string name="incorrect_password_message">Password is incorrect</string>
    <string name="runs">Runs</string>
    <string name="runs_fragment">Runs Fragment</string>
    <string name="run">Run</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="camera_required_error">Camera services is required to take a photo</string>
    <string name="gallery_required_error">Gallery permissions is required to choose a photo</string>
    <string name="activity_recognition_required_error">Recognition must be enabled for step counter</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="record">Record</string>
    <string name="race">Race</string>
    <string name="error">Error</string>
    <string name="create_account_error_message">A user with this email may already exist</string>
    <string name="debug_utils_status_code_formatted">Status Code: %1$s</string>
    <string name="stop">Stop</string>
    <string name="nice_run">Nice Run!</string>
    <string name="save_run_message">Do you want to save this run?</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="run_time">Time: %1$s</string>
    <string name="step_count">Steps: %1$s</string>
    <string name="run_details_title">Your Run on %1$s</string>
    <string name="run_details_fragment">Run Details Fragment</string>
    <string name="won_title">You won!</string>
    <string name="tied_title">Tied!</string>
    <string name="lost_title">You lost..</string>
    <string name="race_time_message">"You ran it in %1$s"</string>
    <string name="good_race">Good Race</string>
    <string name="start_race_message">Go to the Run Icon to start the race!</string>
    <string name="update_account_name_fragment">Update Account Name Fragment</string>
    <string name="change_password_fragment">Change Password Fragment</string>
    <string name="delete_account_fragment">Delete Account Fragment</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete_account">Delete Account</string>
    <string name="add">ADD</string>
    <string name="please_add_name">Please add your name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_image_title">Pick Image From</string>
    <string name="camera_permissions">CAMERA</string>
    <string name="storage_permissions">WRITE_EXTERNAL_STORAGE</string>
    <string name="fine_location_permissions">ACCESS_FINE_LOCATION</string>
    <string name="recognition_permissions">ACTIVITY_RECOGNITION</string>
    <string name="background_location_permissions">ACCESS_BACKGROUND_LOCATION</string>
    <string name="required_field">This is a required field</string>
    <string name="change_name">Change you account name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="empty_password">************</string>
    <string name="change_password">Change Password</string>
    <string name="error_getting_user_info">Error getting user info</string>
    <string name="change_password_success">Successfully changed password!</string>
    <string name="change_name_success">Successfully changed name!</string>
    <string name="delete_account_title">Deleting account will do the following:</string>
    <string name="delete_account_bullet_one">• Your account will be permanently deleted</string>
    <string name="delete_account_bullet_two">• You will be logged out from all devices</string>
    <string name="delete_account_bullet_three">• All data saved on this account will be deleted permanently</string>
    <string name="delete_account_bullet_four">• For any additional questions please reach out to customer service</string>
    <string name="delete_account_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete_account_success_title">Your Account Has Been Deleted</string>
    <string name="delete_account_success_message">Thank you for using Catch Me If You Can</string>
</resources>