<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/existing_settings_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setting_profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_account"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/name_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/border_top_background"
                app:layout_constraintTop_toBottomOf="@id/setting_profile_image" >

                <TextView
                    android:id="@+id/name_title"
                    android:textColor="@color/black"
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/name_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/edit_button_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="16dp"
                    android:paddingHorizontal="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/edit"
                    android:textAllCaps="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/delete_account_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/border_top_bottom_background"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/black"
                android:layout_marginVertical="16dp"
                android:paddingVertical="16dp"
                android:text="@string/delete_account"
                android:drawablePadding="12dp"
                app:layout_constraintTop_toBottomOf="@id/name_linear_layout"
                app:drawableLeftCompat="@drawable/ic_account_small"
                app:drawableRightCompat="@drawable/ic_arrow_forward" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>